Fixes #589 - Styling for "other" checkbox/radio option not aligned (#590)
* Fix formBuilder "other" styling for checkbox/radio-groups

* Fix formRender styling for "other" option in checkbox-groups

* Fix formRender styling for radio-groups

* Actually, this styling just isn't necessary any more

--- a/src/sass/_stage.scss
+++ b/src/sass/_stage.scss
@@ -308,12 +308,6 @@
       width: auto;
     }
 
-    input[type='checkbox'],
-    input[type='radio'] {
-      display: inline-block;
-      margin-left: 0;
-    }
-
     input[type='color'] {
       width: 60px;
       padding: 2px;
