--- a/src/sass/base/_bs.scss
+++ b/src/sass/base/_bs.scss
@@ -219,7 +219,13 @@ textarea.form-control {
 }
 
 .fb-checkbox-group {
-  .checkbox input {
+  .checkbox > input {
+    margin-left: 0;
+  }
+}
+
+.fb-radio-group {
+  .radio > input {
     margin-left: 0;
   }
 }
